@@ -12,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -58,6 +57,6 @@ public class DashboardService {
                         activity.getTicket().getTitle(),
                         activity.getCreatedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
