@@ -2,7 +2,6 @@ package com.capstone.tele_ticketing_backend_1.service;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
@@ -49,6 +48,6 @@ public class ManagerService {
                 .map(ticket -> new TicketSummaryDto(
                         ticket.getId(), ticket.getTicketUid(), ticket.getTitle(),
                         ticket.getStatus(), ticket.getCreatedAt()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
