@@ -38,6 +38,8 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class TeamLeadService {
 
+    private final static String noTL = "Team lead not found";
+
     private final UserRepo userRepo;
     private final TeamRepo teamRepo;
     private final TicketRepo ticketRepo;
@@ -51,7 +53,7 @@ public class TeamLeadService {
         List<TicketStatus> activeStatuses = List.of(TicketStatus.ASSIGNED, TicketStatus.IN_PROGRESS);
         List<Ticket> tickets = ticketRepo.findTicketsByTeamAndStatus(team.getId(), activeStatuses);
         log.debug("Found {} active tickets for team: {}", tickets.size(), team.getName());
-        return tickets.stream().map(this::mapTicketToSummaryDto).collect(Collectors.toList());
+        return tickets.stream().map(this::mapTicketToSummaryDto).toList();
     }
 
     @Transactional(readOnly = true)
@@ -62,7 +64,7 @@ public class TeamLeadService {
         LocalDateTime twoHoursFromNow = now.plusHours(2);
         List<Ticket> tickets = ticketRepo.findSlaRiskTicketsByTeam(team.getId(), now, twoHoursFromNow);
         log.warn("Found {} SLA risk tickets for team: {}", tickets.size(), team.getName());
-        return tickets.stream().map(this::mapTicketToSummaryDto).collect(Collectors.toList());
+        return tickets.stream().map(this::mapTicketToSummaryDto).toList();
     }
 
     @Transactional
@@ -117,7 +119,7 @@ public class TeamLeadService {
     }
 
     private Team findTeamByLead(String username) {
-        AppUser teamLead = userRepo.findByUsername(username).orElseThrow(() -> new UserNotFoundException("Team Lead not found"));
+        AppUser teamLead = userRepo.findByUsername(username).orElseThrow(() -> new UserNotFoundException(noTL));
         Team team = teamRepo.findByTeamLead(teamLead).orElseThrow(() -> new BadRequestException("You are not registered as a lead of any team."));
         return team;
     }
@@ -131,12 +133,12 @@ public class TeamLeadService {
         Team team = findTeamByLead(teamLeadUsername);
         return team.getMembers().stream()
                 .map(member -> new UserSummaryDto(member.getId(), member.getUsername(), member.getFullName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public TeamDetailDto getTeamDetails(String teamLeadUsername) {
-        AppUser teamLead = userRepo.findByUsername(teamLeadUsername).orElseThrow(() -> new UserNotFoundException("Team Lead not found"));
+        AppUser teamLead = userRepo.findByUsername(teamLeadUsername).orElseThrow(() -> new UserNotFoundException(noTL));
         // This will throw if no team is found, which we'll handle on the frontend.
         Team team = teamRepo.findByTeamLead(teamLead).orElseThrow(() -> new ResourceNotFoundException("Team not found for the current user."));
 
@@ -146,7 +148,7 @@ public class TeamLeadService {
     @Transactional
     public TeamDetailDto updateTeam(TeamMemberUpdateRequestDto dto, String teamLeadUsername) {
         AppUser teamLead = userRepo.findByUsername(teamLeadUsername)
-                .orElseThrow(() -> new UserNotFoundException("Team Lead not found"));
+                .orElseThrow(() -> new UserNotFoundException(noTL));
 
         // Find existing team or create a new one if adding members for the first time.
         Team team = teamRepo.findByTeamLead(teamLead).orElseGet(() -> {
